services/kafka.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
spec:
  ports:
    - port: 9092
  selector:
    app: kafka
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: bitnami/kafka:4.0
          ports:
            - containerPort: 9092
            - containerPort: 9093  # Controller port
