services/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: library-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: library.local
    http:
      paths:
      - path: /books(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: book-service
            port:
              number: 5001
      - path: /borrows(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: borrow-service
            port:
              number: 8080
      - path: /user(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: user-mgmt-service
            port:
              number: 8000
      - path: /notification(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: notification
            port:
              number: 8085
